modified html file

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <img src="http://upload.wikimedia.org/wikipedia/en/a/ab/M_poster.jpg" alt="" align="left">
 <div class="content">
 	<h1>Hello Michael</h1>
-	<p>You're <blink>Not</blink> the best!</p>
+	<p>You're Not the best!</p>
 	<p>Email me at <a href="mailto:michael@michaelheard.com">michael@michaelheard.com</a></p>
 </div>
 
