--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 <img src="http://upload.wikimedia.org/wikipedia/en/a/ab/M_poster.jpg" alt="" align="left">
 <div class="content">
-	<h1>Hello Michael</h1>
-	<p>You're Not the best!</p>
+	<h1>Hello, I'm Michael</h1>
+	<blockquote>
+		"Sometimes I'll start a senence and I don't know where it's going. I just hope I find it along the way."
+	</blockquote>
 	<p>Email me at <a href="mailto:michael@michaelheard.com">michael@michaelheard.com</a></p>
 </div>
 
