--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <img src="http://upload.wikimedia.org/wikipedia/en/a/ab/M_poster.jpg" alt="" align="left">
 <div class="content">
 	<h1>Hello, I'm Michael</h1>
+	<p>My name is Michael, I was born in a cabin in a small town outside of Chicago.</p>
 	<blockquote>
 		"Sometimes I'll start a senence and I don't know where it's going. I just hope I find it along the way."
 	</blockquote>
