--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,12 +62,16 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+.left-content, .right-content {
+	width: 350px;
+	float: left;
+}
 /* Beginning my styles */
 body {
 	font-family: sans-serif;
 	padding-top: 100px;
 	margin: 0 auto;
-	width: 600px;
+	width: 700px;
 }
 
 h1 {
@@ -79,8 +83,19 @@ blockquote {
 	font-family: cursive;
 }
 p {
-	margin: 1em;
+	margin: 1em 0;
+}
+figure {
+
 }
 img {
+	display: block;
 	margin-right: 20px;
+	border: 5px solid red;
+}
+figcaption {
+	text-align: left;
+	padding-top: 5px;
+	color: #ccc;
+	font-style: italic;
 }
