--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,16 @@
-<img src="http://upload.wikimedia.org/wikipedia/en/a/ab/M_poster.jpg" alt="" align="left">
-<div class="content">
+<div class="left-content">
+	<figure>
+		<img src="http://upload.wikimedia.org/wikipedia/en/a/ab/M_poster.jpg" alt="" class="welcomimage">
+		<figcaption>This is my Description of an image</figcaption>
+	</figure>
+</div>
+<div class="right-content">
 	<h1>Hello, I'm Michael</h1>
 	<p>My name is Michael, I was born in a cabin in a small town outside of Chicago.</p>
 	<blockquote>
-		"Sometimes I'll start a senence and I don't know where it's going. I just hope I find it along the way."
+		"Sometimes I'll start a sentence and I don't know where it's going. I just hope I find it along the way."
 	</blockquote>
 	<p>Email me at <a href="mailto:michael@michaelheard.com">michael@michaelheard.com</a></p>
+
 </div>
 
