Modified css and added sitemap and about page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,11 +6,16 @@
 </div>
 <div class="right-content">
 	<h1>Hello, I'm Michael</h1>
-	<p>My name is Michael, I was born in a cabin in a small town outside of Chicago.</p>
+	<p>Welcome to my site!</p>
 	<blockquote>
 		"Sometimes I'll start a sentence and I don't know where it's going. I just hope I find it along the way."
 	</blockquote>
 	<p>Email me at <a href="mailto:michael@michaelheard.com">michael@michaelheard.com</a></p>
 
 </div>
+<footer>
+	<a href="/welcome/index">Welcome</a>
+	<a href="/about/index">About Me</a>
+	<a href="/sitemap/index">Site Map</a>
+</footer>
 
