--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,7 @@
-<h1>About Me</h1>
-<p>My name is Michael, I was born and raised in Atlanta, Ga.</p>
+<div class="content">
+	<div class="page-content">
+		<%= image_tag("line-break2.svg", :alt => "about me", :class => "line-break") %>
+		<h1>About Me</h1>
+		<p>My name is Michael, I was born and raised in Atlanta, Ga.</p>
+	</div>
+</div>
