--- a/app/views/sitemap/index.html.erb
+++ b/app/views/sitemap/index.html.erb
@@ -1,6 +1,20 @@
-<h1>Sitemap</h1>
-<ul>
-	<li><a href="/welcome/index">Welcome</a></li>
-	<li>-- <a href="/about/index">About Me</a></li>
-	<li>-- <a href="/sitemap/index">Site Map</a></li>
-</ul>
+<div class="content">
+	<div class="page-content">
+		<%= image_tag("line-break2.svg", :alt => "about me", :class => "line-break") %>
+		<h1>Sitemap</h1>
+		<div class="sitemap">
+			<div class="welcome-top">
+				<a href="/welcome/index">Welcome</a>
+				<div class="circle"></div>
+			</div>
+			<div class="sitemap-left">
+				<div class="circle"></div>
+				<a href="/about/index">About Me</a>
+			</div>
+			<div class="sitemap-right">
+				<div class="circle"></div>
+				<a href="/sitemap/index">Site Map</a>
+			</div>
+		</div>
+	</div>
+</div>
