--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,7 @@
-<div class="left-content">
-	<figure>
-		<img src="http://upload.wikimedia.org/wikipedia/en/a/ab/M_poster.jpg" alt="" class="welcomimage">
-		<figcaption>This is my Description of an image</figcaption>
-	</figure>
-</div>
-<div class="right-content">
+
+<div class="content">
+<div class="page-content">
+<%= image_tag("line-break2.svg", :alt => "about me", :class => "line-break") %>
 	<h1>Hello, I'm Michael</h1>
 	<p>Welcome to my site!</p>
 	<blockquote>
@@ -13,9 +10,4 @@
 	<p>Email me at <a href="mailto:michael@michaelheard.com">michael@michaelheard.com</a></p>
 
 </div>
-<footer>
-	<a href="/welcome/index">Welcome</a>
-	<a href="/about/index">About Me</a>
-	<a href="/sitemap/index">Site Map</a>
-</footer>
-
+</div>
