--- a/app/views/sitemap/index.html.erb
+++ b/app/views/sitemap/index.html.erb
@@ -3,6 +3,8 @@
 		<%= image_tag("line-break2.svg", :alt => "about me", :class => "line-break") %>
 		<h1>Sitemap</h1>
 		<div class="sitemap">
+		<div class="line one"></div>
+		<div class="line two"></div>
 			<div class="welcome-top">
 				<a href="/welcome/index">Welcome</a>
 				<div class="circle"></div>
