added link_to to links

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,9 +9,9 @@
 	</figure> -->
 <nav>
 	<ul>
-		<li><a href="/welcome/index">Welcome</a></li>
-		<li><a href="/about/index">About Me</a></li>
-		<li><a href="/sitemap/index">Site Map</a></li>
+		<li><%= link_to("Welcome", "/welcome/index" ) %></li>
+		<li><%= link_to("About Me", "/about/index" ) %></li>
+		<li><%= link_to("Site Map", "/sitemap/index" ) %></li>
 	</ul>
 </nav>
 </div>
