--- a/app/views/sitemap/index.html.erb
+++ b/app/views/sitemap/index.html.erb
@@ -6,16 +6,16 @@
 		<div class="line one"></div>
 		<div class="line two"></div>
 			<div class="welcome-top">
-				<a href="/welcome/index">Welcome</a>
+				<%= link_to("Welcome", "/welcome/index" ) %>
 				<div class="circle"></div>
 			</div>
 			<div class="sitemap-left">
 				<div class="circle"></div>
-				<a href="/about/index">About Me</a>
+				<%= link_to("About Me", "/about/index" ) %>
 			</div>
 			<div class="sitemap-right">
 				<div class="circle"></div>
-				<a href="/sitemap/index">Site Map</a>
+				<%= link_to("Site Map", "/sitemap/index" ) %>
 			</div>
 		</div>
 	</div>
