--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <header>
-<%= image_tag("logo.svg", :alt => "site logo", :class => "logo") %>
+<%= image_tag("logo2.svg", :alt => "site logo", :class => "logo") %>
 </header>
 <div class="sidebar">
 
