made some changes to links to use link_to

--- a/app/views/sitemap/index.html.erb
+++ b/app/views/sitemap/index.html.erb
@@ -11,7 +11,7 @@
 			</div>
 			<div class="sitemap-left">
 				<div class="circle"></div>
-				<%= link_to("About Me", "/about/index" ) %>
+				<%= link_to("About Me", "/about" ) %>
 			</div>
 			<div class="sitemap-right">
 				<div class="circle"></div>
