--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,17 +1,13 @@
 <header>
-<%= image_tag("logo2.svg", :alt => "site logo", :class => "logo") %>
+<%= link_to image_tag("logo2.svg", :border => 0, :alt => 'site logo', :class => 'logo'), "/welcome" %>
 </header>
 <div class="sidebar">
-
-<!-- 	<figure>
-		<img src="http://upload.wikimedia.org/wikipedia/en/a/ab/M_poster.jpg" alt="" class="welcomimage">
-		<figcaption>This is my Description of an image</figcaption>
-	</figure> -->
 <nav>
 	<ul>
-		<li><%= link_to("Welcome", "/welcome/index" ) %></li>
-		<li><%= link_to("About Me", "/about/index" ) %></li>
-		<li><%= link_to("Site Map", "/sitemap/index" ) %></li>
+		<li><%= link_to("Welcome", "/welcome" ) %></li>
+		<li><%= link_to("About Me", "/about" ) %></li>
+		<li>- <%= link_to("Pics", "/pics" ) %></li>
+		<li><%= link_to("Site Map", "/sitemap" ) %></li>
 	</ul>
 </nav>
 </div>
