added some images and linked them on my page, added time stamp based on cookies on every page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,10 +4,10 @@
 <%= image_tag("line-break2.svg", :alt => "about me", :class => "line-break") %>
 	<h1>Hello, I'm Michael</h1>
 	<p>Welcome to my site!</p>
+	<p>Your first visit: </p>
 	<blockquote>
 		"Sometimes I'll start a sentence and I don't know where it's going. I just hope I find it along the way."
 	</blockquote>
 	<p>Email me at <a href="mailto:michael@michaelheard.com">michael@michaelheard.com</a></p>
-
 </div>
 </div>
