--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,7 +38,7 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	padding-top: 100px;
 	margin: 0 auto;
-	width: 800px;
+	max-width: 800px;
 	font-size: 16px;
 }
 a:link,a:hover,a:active,a:visited {
@@ -57,11 +57,6 @@ header {
 	font-size: 1.5em;
 	color: $site-red;
 }
-.sidebar {
-	width: 20%;
-	float: left;
-	padding-right: 2em;
-}
 nav {
 	font-size: 24px;
 	li {
@@ -74,10 +69,13 @@ nav {
 		}
 	}
 }
-
+.sidebar {
+	width: 20%;
+	float: left;
+	padding-right: 2em;
+}
 .content {
 	width: 70%;
-	height: 100%;
 	float: left;
 	border-left: 1px solid #444;
 }
@@ -92,6 +90,8 @@ nav {
 }
 footer {
 	clear: both;
+	padding: 3em;
+	text-align: right;
 }
 h1 {
 	font-size: 2em;
@@ -111,4 +111,10 @@ figcaption {
 	padding-top: 5px;
 	color: #ccc;
 	font-style: italic;
+}
+
+.clear:after {
+  content: ' ';
+  display: block;
+  clear: both;
 }
