--- a/app/views/about/pics.html.erb
+++ b/app/views/about/pics.html.erb
@@ -1,10 +1,10 @@
 <div class="content">
 	<div class="page-content">
-		<% image_data = [['http://i1.trekearth.com/photos/4435/north_sea_storm.jpg','A picture of a sea','http://www.google.com'],['http://thehenrybrothers.files.wordpress.com/2012/01/the_sea.jpg','Another picture of a sea','http://www.google.com'],['http://www.richardhellergallery.com/dynamic/images/detail/Corey_Arnold_The_North_Sea_2011_1927_412.jpg','The last picture of a sea','http://www.google.com']] %>
-		<% image_data.each do |data| %>
-			<a href="<%= data[2] %>" target="_blank">
-				<img src="<%= data[0] %>" alt="">
-				<p><%= data[1] %></p>
+	<%= image_tag("line-break2.svg", :alt => "about me", :class => "line-break") %>
+		<% @image_data.each do |description,image_url_link| %>
+			<a href="<%= image_url_link[1] %>" target="_blank">
+			<%= image_tag(image_url_link[0]) %>
+				<p><%= description %></p>
 			</a>
 		<% end %>
 	</div>
