begin design phase of match game

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,10 +4,13 @@
 <div class="sidebar">
 <nav>
 	<ul>
-		<li><%= link_to("Welcome", "/welcome" ) %></li>
-		<li><%= link_to("About Me", "/about" ) %></li>
-		<li>- <%= link_to("Pics", "/pics" ) %></li>
-		<li><%= link_to("Site Map", "/sitemap" ) %></li>
+		<li><%= link_to("Welcome", "welcome" ) %></li>
+		<li><%= link_to("About Me", "about" ) %></li>
+		<li>- <%= link_to("Pics", "pics" ) %></li>
+		<li><%= link_to("Site Map", "sitemap" ) %></li>
+		<li><%= link_to("Random", "random" ) %></li>
+		<li>- <%= link_to("Match Game", "matchgame" ) %></li>
+		<li>- <%= link_to("Question", "matchgamequestion" ) %></li>
 	</ul>
 </nav>
 </div>
