--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,5 +9,11 @@
 		"Sometimes I'll start a sentence and I don't know where it's going. I just hope I find it along the way."
 	</blockquote>
 	<p>Email me at <a href="mailto:michael@michaelheard.com">michael@michaelheard.com</a></p>
+	<form action="/set_name" method="POST">
+		<label for="name">Please enter your name</label>
+		<input type="textfield" id="name" name="user_name">
+		<input type="submit" value="Submit">
+		<input type="hidden" name="authenticity_token" value="<%=form_authenticity_token %>">
+	</form>
 </div>
 </div>
