--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,8 +9,9 @@
 		<li>- <%= link_to("Pics", "pics" ) %></li>
 		<li><%= link_to("Site Map", "sitemap" ) %></li>
 		<li><%= link_to("Random", "random" ) %></li>
-		<li>- <%= link_to("Match Game", "matchgame" ) %></li>
-		<li>- <%= link_to("Question", "matchgamequestion" ) %></li>
+		<li>- <%= link_to("Match Game", "matchgamehome" ) %></li>
+		<li>- <%= link_to("Question", "matchgame" ) %></li>
+		<li>- <%= link_to("Background", "background" ) %></li>
 	</ul>
 </nav>
 </div>
