--- a/app/assets/stylesheets/random.css.scss
+++ b/app/assets/stylesheets/random.css.scss
@@ -14,28 +14,45 @@
 		color: black;
 	}
 //Refresh Page Button
-a.refreshpage {
-	width: 100%;
-	border-radius: 5px;
-	display: block;
-	clear: both;
-	background-color: #00aeef;
-	padding: 15px;
-	text-decoration: none;
-	text-align: center;
-	color: black;
-	&:visited,&:link,&:active{
+	a.refreshpage {
+		width: 100%;
+		border-radius: 5px;
+		display: block;
+		clear: both;
+		background-color: #00aeef;
+		padding: 15px;
+		text-decoration: none;
+		text-align: center;
 		color: black;
+		&:visited,&:link,&:active{
+			color: black;
+		}
+		&:hover {
+			color: white;
+			background-color: #e55346;
+		}
+		&.firstpage {
+			width: 465px;
+			margin-bottom: 15px;
+		}
 	}
-	&:hover {
-		color: white;
-		background-color: #e55346;
+	input[type=submit] {
+		width: 100%;
+		border-radius: 5px;
+		display: block;
+		clear: both;
+		background-color: #00aeef;
+		padding: 15px;
+		-webkit-appearance: none;
+		border: 0;
+		font-size: 1em;
+		font-weight: bold;
+		cursor: pointer;
+		&:hover {
+			background-color: #e55346;
+			color: white;
+		}
 	}
-	&.firstpage {
-		width: 465px;
-		margin-bottom: 15px;
-	}
-}
 //Pretty Title
 	h3 {
 		text-align: center;
