testing heroku image upload

--- a/app/assets/stylesheets/random.css.scss
+++ b/app/assets/stylesheets/random.css.scss
@@ -89,7 +89,7 @@
 
 	}
 	.pig {
-	background: url(pig.svg) #3D8099 50% 50% no-repeat;
+	background: url(image-path('pig.svg')) #3D8099 50% 50% no-repeat;
 	}
 	.surfboard {
 	background: url(surfboard.svg) #00FFB9 50% 50% no-repeat;
