fixing image uploads

--- a/app/assets/stylesheets/random.css.scss
+++ b/app/assets/stylesheets/random.css.scss
@@ -92,28 +92,28 @@
 	background: url(image-path('pig.svg')) #3D8099 50% 50% no-repeat;
 	}
 	.surfboard {
-	background: url(surfboard.svg) #00FFB9 50% 50% no-repeat;
+	background: url(image-path('surfboard.svg')) #00FFB9 50% 50% no-repeat;
 	}
 	.diamond {
-	background: url(diamond.svg) #FF5040 50% 50% no-repeat;
+	background: url(image-path('diamond.svg')) #FF5040 50% 50% no-repeat;
 	}
 	.rain {
-	background: url(rain.svg) #CC143C 50% 50% no-repeat;
+	background: url(image-path('rain.svg')) #CC143C 50% 50% no-repeat;
 	}
 	.car {
-	background: url(car.svg) #F2C94E 50% 50% no-repeat;
+	background: url(image-path('car.svg')) #F2C94E 50% 50% no-repeat;
 	}
 	.dog {
-	background: url(dog.svg) #11644D 50% 50% no-repeat;
+	background: url(image-path('dog.svg')) #11644D 50% 50% no-repeat;
 	}
 	.boat {
-	background: url(boat.svg) #CE0CE8 50% 50% no-repeat;
+	background: url(image-path('boat.svg')) #CE0CE8 50% 50% no-repeat;
 	}
 	.rainbow {
-	background: url(rainbow.svg) #B1CC14 50% 50% no-repeat;
+	background: url(image-path('rainbow.svg')) #B1CC14 50% 50% no-repeat;
 	}
 	.bigfoot {
-	background: url(bigfoot.svg) #99453D 50% 50% no-repeat;
+	background: url(image-path('bigfoot.svg')) #99453D 50% 50% no-repeat;
 	}
 
 }
