--- a/app/views/random/index.html.erb
+++ b/app/views/random/index.html.erb
@@ -1,5 +1,6 @@
 <div class="content">
 	<div class="page-content">
+	<%= @backgroundcolor %>
 		<%= image_tag("line-break2.svg", :alt => "about me", :class => "line-break") %>
 		<h1>Random Sentence</h1>
 			<p><%= @output %></p>
