added categories to model and created category buttons on portfolio page

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -11,6 +11,7 @@
 		<li><%= link_to("Random", "random" ) %></li>
 		<li>- <%= link_to("Match Game", "matchgamehome" ) %></li>
 		<li>- <%= link_to("Background", "background" ) %></li>
+		<li><%= link_to("Portfolio", "portfolio" ) %></li>
 	</ul>
 </nav>
 </div>
