--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -6,3 +6,14 @@ img {
 	width: 100%;
 	height: auto;
 }
+
+.category_button {
+	width: 75px;
+	border-radius: 5px;
+	background-color: #00aeef;
+	border: 0;
+	font-weight: bold;
+	font-size: 1em;
+	padding: 7px;
+	text-align: center;
+}
