--- a/app/views/about/portfolio.html.erb
+++ b/app/views/about/portfolio.html.erb
@@ -1,12 +1,18 @@
 <div class="content">
 	<div class="page-content">
+	<form action="/portfolio" method="GET">
+		<button class="category_button" name="category" value="rails">Rails</button>
+		<button class="category_button" name="category" value="ruby">Ruby</button>
+		<button class="category_button" name="category" value="all">All</button>
+	</form>
 	<% @projects.each do |project| %>
-		<ul>
+			<ul>
 			<li>Name: <%= project.name %></li>
 			<li>Description: <%= project.description %></li>
-			<li></li>
+			<li>Category: <%= project.category %></li>
 			<li></li>
 		</ul>
+		<br>
 	<% end %>
 	</div>
 </div>
