added categories to pics model and page and created way for any number of categories to be displayed on the page pulled from the model

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -6,7 +6,9 @@ img {
 	width: 100%;
 	height: auto;
 }
-
+.category_block {
+	margin-bottom: 1em;
+}
 .category_button {
 	width: 75px;
 	border-radius: 5px;
